--- a/index.html
+++ b/index.html
@@ -616,6 +616,75 @@
                     </div>
                 </div>
 
+                <!-- RESTRICTED SETTINGS NOTICE -->
+                <div class="guide-card guide-card-full guide-card-warning">
+                    <div class="guide-step-badge"
+                        style="background:linear-gradient(135deg,#E65100,#FF9800);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;color:transparent">
+                        ⚠</div>
+                    <div class="guide-card-inner">
+                        <div class="guide-icon-wrap" style="background:linear-gradient(135deg,#E65100,#FF9800)">
+                            <svg width="28" height="28" viewBox="0 0 24 24" fill="white">
+                                <path
+                                    d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z" />
+                            </svg>
+                        </div>
+                        <div class="guide-content">
+                            <h3>Android 13+ — Bypassing "Restricted Settings"</h3>
+                            <p>In recent Android versions (13, 14 &amp; 15), Google introduced a security feature called
+                                <strong>Restricted Settings</strong>. Because FinSage is sideloaded (installed via APK
+                                rather than the Play Store), Android may automatically block sensitive permissions like
+                                SMS, displaying a popup: <em>"For your security, this setting is currently
+                                    unavailable."</em></p>
+                            <p style="margin-top:10px">If you see this, follow these steps to unlock the permission:</p>
+                            <div class="guide-feature-grid guide-feature-grid-2" style="margin-top:16px">
+                                <div class="guide-feature-item">
+                                    <div class="gfi-icon">1️⃣</div>
+                                    <div>
+                                        <strong>Trigger the restriction</strong>
+                                        <p>Open FinSage and try to enable the SMS permission. When the <em>"For your
+                                                security…"</em> popup appears, tap <strong>OK</strong> to dismiss it.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="guide-feature-item">
+                                    <div class="gfi-icon">2️⃣</div>
+                                    <div>
+                                        <strong>Go to App Info</strong>
+                                        <p>Open <strong>Settings → Apps → See all apps</strong>, then find and tap
+                                            <strong>FinSage</strong>.</p>
+                                    </div>
+                                </div>
+                                <div class="guide-feature-item">
+                                    <div class="gfi-icon">3️⃣</div>
+                                    <div>
+                                        <strong>Allow Restricted Settings</strong>
+                                        <p>Tap the <strong>⋮ three-dot menu</strong> in the top-right corner of the App
+                                            Info page, choose <strong>"Allow restricted settings"</strong>, and
+                                            authenticate with your PIN, pattern, or fingerprint.</p>
+                                    </div>
+                                </div>
+                                <div class="guide-feature-item">
+                                    <div class="gfi-icon">4️⃣</div>
+                                    <div>
+                                        <strong>Grant the Permission</strong>
+                                        <p>Return to the <strong>Permissions</strong> section in App Info. The SMS
+                                            option will no longer be greyed out — toggle it to <strong>Allow</strong>.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="guide-tips" style="margin-top:20px">
+                                <div class="guide-tip">
+                                    <span class="tip-icon">🛡️</span>
+                                    <span>This restriction only applies to sideloaded apps. It is a standard Android
+                                        security layer — not a bug. Allowing the setting for FinSage is safe because
+                                        FinSage is open-source and does not upload your data anywhere.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- STEP 2 -->
                 <div class="guide-card">
                     <div class="guide-step-badge">02</div>
