style: fix hyphenation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FinSage — Smart Finance Manager for Android</title>
+    <title>FinSage - Smart Finance Manager for Android</title>
     <meta name="description"
         content="FinSage automatically tracks your expenses by reading bank SMS. Beautiful charts, AI insights, and total privacy. All on your device." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -388,7 +388,7 @@
                     <div class="insight-feat">
                         <div class="insight-feat-icon" id="if-lightbulb"></div>
                         <div><strong>Spending forecast</strong>
-                            <p>AI predicts next month's spend based on your 3-month average — so you can plan ahead.</p>
+                            <p>AI predicts next month's spend based on your 3-month average - so you can plan ahead.</p>
                         </div>
                     </div>
                     <div class="insight-feat">
@@ -463,7 +463,7 @@
                         <div class="mock-ai-card">
                             <div class="mock-ai-header"><span class="mock-ai-title">AI Insights</span><span
                                     class="mock-ai-star">✨</span></div>
-                            <div class="mock-ai-body">Your food spending is 29% of total — consider meal prepping to
+                            <div class="mock-ai-body">Your food spending is 29% of total - consider meal prepping to
                                 save ₹3–4K this month. Shopping spike detected in Week 2.</div>
                         </div>
                     </div>
@@ -484,7 +484,7 @@
                             id="ob-icon-0"></div>
                         <h3>Welcome to FinSage</h3>
                         <p>Your smart, private finance companion. Track expenses, gain insights, and take control of
-                            your money — all from your pocket.</p>
+                            your money - all from your pocket.</p>
                     </div>
                     <div class="onboarding-slide">
                         <div class="ob-icon-wrap" style="background:linear-gradient(135deg,#0D47A1,#42A5F5)"
@@ -562,7 +562,7 @@
                     <div class="privacy-point">
                         <div class="pp-check">✓</div>
                         <div><strong>Anonymous AI requests</strong>
-                            <p>When Gemini AI is invoked, only merchant name + amount is sent — never your personal
+                            <p>When Gemini AI is invoked, only merchant name + amount is sent - never your personal
                                 details or full SMS.</p>
                         </div>
                     </div>
@@ -597,7 +597,7 @@
                         <div class="guide-content">
                             <h3>First Launch &amp; Grant SMS Permission</h3>
                             <p>When you open FinSage for the first time, a permission prompt will appear asking to
-                                <strong>Read SMS messages</strong>. Tap <strong>"Allow"</strong> — this is the only
+                                <strong>Read SMS messages</strong>. Tap <strong>"Allow"</strong> - this is the only
                                 permission FinSage needs. Without it, automatic transaction tracking cannot work.
                             </p>
                             <div class="guide-tips">
@@ -629,7 +629,7 @@
                             </svg>
                         </div>
                         <div class="guide-content">
-                            <h3>Android 13+ — Bypassing "Restricted Settings"</h3>
+                            <h3>Android 13+ - Bypassing "Restricted Settings"</h3>
                             <p>In recent Android versions (13, 14 &amp; 15), Google introduced a security feature called
                                 <strong>Restricted Settings</strong>. Because FinSage is sideloaded (installed via APK
                                 rather than the Play Store), Android may automatically block sensitive permissions like
@@ -670,7 +670,7 @@
                                     <div>
                                         <strong>Grant the Permission</strong>
                                         <p>Return to the <strong>Permissions</strong> section in App Info. The SMS
-                                            option will no longer be greyed out — toggle it to <strong>Allow</strong>.
+                                            option will no longer be greyed out - toggle it to <strong>Allow</strong>.
                                         </p>
                                     </div>
                                 </div>
@@ -679,7 +679,7 @@
                                 <div class="guide-tip">
                                     <span class="tip-icon">🛡️</span>
                                     <span>This restriction only applies to sideloaded apps. It is a standard Android
-                                        security layer — not a bug. Allowing the setting for FinSage is safe because
+                                        security layer - not a bug. Allowing the setting for FinSage is safe because
                                         FinSage is open-source and does not upload your data anywhere.</span>
                                 </div>
                             </div>
@@ -703,7 +703,7 @@
                         <li>Detects and parses the SMS instantly</li>
                         <li>Extracts merchant, amount, and date</li>
                         <li>Auto-categorizes using 3-layer logic</li>
-                        <li>Saves the transaction — no action needed</li>
+                        <li>Saves the transaction - no action needed</li>
                     </ul>
                     <div class="guide-tag-row">
                         <span class="guide-tag">HDFC</span>
@@ -728,13 +728,13 @@
                         <li>Go to the <strong>Settings</strong> tab (bottom navigation)</li>
                         <li>Under <em>"Data &amp; Maintenance"</em>, choose your <strong>Import Period</strong> (3, 6,
                             12 months, or All time)</li>
-                        <li>Tap <strong>"Start Import"</strong> and wait — progress is shown live</li>
+                        <li>Tap <strong>"Start Import"</strong> and wait - progress is shown live</li>
                         <li>Your full transaction history appears instantly on the Dashboard</li>
                     </ol>
                     <div class="guide-tips">
                         <div class="guide-tip">
                             <span class="tip-icon">⚡</span>
-                            <span>Import runs in the background — you can continue using the app while it works.</span>
+                            <span>Import runs in the background - you can continue using the app while it works.</span>
                         </div>
                     </div>
                 </div>
@@ -824,7 +824,7 @@
                         <li>Tap the <strong>+ button</strong> in the bottom navigation bar</li>
                         <li>Enter the <strong>amount</strong> (₹ symbol provided)</li>
                         <li>Select <strong>Expense</strong> or <strong>Income</strong></li>
-                        <li>Pick a <strong>category</strong> — AI may suggest one automatically</li>
+                        <li>Pick a <strong>category</strong> - AI may suggest one automatically</li>
                         <li>Choose the <strong>date</strong> using the calendar picker</li>
                         <li>Optionally add a <strong>merchant name</strong> and <strong>narration</strong></li>
                         <li>Tap <strong>"Save Transaction"</strong></li>
@@ -850,16 +850,16 @@
                     <h3>Read Your Insights</h3>
                     <p>Tap the <strong>Insights</strong> tab to see a deep analysis of your finances:</p>
                     <ul class="guide-list">
-                        <li><strong>Financial Overview</strong> — Income, expenses, savings rate &amp; income/expense
+                        <li><strong>Financial Overview</strong> - Income, expenses, savings rate &amp; income/expense
                             ratio for the current month</li>
-                        <li><strong>Next Month Forecast</strong> — AI prediction based on your 3-month spending average
+                        <li><strong>Next Month Forecast</strong> - AI prediction based on your 3-month spending average
                         </li>
-                        <li><strong>Weekly Spending Graph</strong> — Smooth line chart showing day-by-day spend across
+                        <li><strong>Weekly Spending Graph</strong> - Smooth line chart showing day-by-day spend across
                             the week</li>
-                        <li><strong>Spending Trends</strong> — 6-month rolling bar chart to spot seasonal patterns</li>
-                        <li><strong>Top Categories</strong> — Animated progress bars ranking your biggest expense
+                        <li><strong>Spending Trends</strong> - 6-month rolling bar chart to spot seasonal patterns</li>
+                        <li><strong>Top Categories</strong> - Animated progress bars ranking your biggest expense
                             categories</li>
-                        <li><strong>AI Insights Card</strong> — Gemini-generated summary + actionable suggestions
+                        <li><strong>AI Insights Card</strong> - Gemini-generated summary + actionable suggestions
                             (requires API key in Settings)</li>
                     </ul>
                 </div>
@@ -876,7 +876,7 @@
                         <div class="guide-content">
                             <h3>Create Smart Rules (Auto-Categorization)</h3>
                             <p>Teach FinSage once and it remembers forever. Smart Rules let you map any merchant keyword
-                                to a category automatically — no AI needed, instant and offline.</p>
+                                to a category automatically - no AI needed, instant and offline.</p>
                             <div class="guide-feature-grid guide-feature-grid-3">
                                 <div class="guide-feature-item">
                                     <div class="gfi-icon">➕</div>
@@ -899,7 +899,7 @@
                                     <div class="gfi-icon">📊</div>
                                     <div>
                                         <strong>Rule Analytics</strong>
-                                        <p>Each rule shows how many transactions it matched and when it last fired — so
+                                        <p>Each rule shows how many transactions it matched and when it last fired - so
                                             you can see which rules are working hardest for you.</p>
                                     </div>
                                 </div>
@@ -907,7 +907,7 @@
                             <div class="guide-tips" style="margin-top:20px">
                                 <div class="guide-tip">
                                     <span class="tip-icon">⚡</span>
-                                    <span>Rules are checked <strong>before</strong> keywords &amp; AI — so they're
+                                    <span>Rules are checked <strong>before</strong> keywords &amp; AI - so they're
                                         instant, offline, and always take priority.</span>
                                 </div>
                             </div>
@@ -943,7 +943,7 @@
                         </div>
                         <div class="guide-tip">
                             <span class="tip-icon">🔒</span>
-                            <span>Only the merchant name + amount is sent to Gemini — never your full SMS or personal
+                            <span>Only the merchant name + amount is sent to Gemini - never your full SMS or personal
                                 info.</span>
                         </div>
                     </div>
@@ -968,7 +968,7 @@
                             top of the transaction list.</li>
                         <li>Add a <strong>home screen widget</strong> (Financial Pulse, Monthly Spending, or Recent
                             Activity) for at-a-glance stats without opening the app.</li>
-                        <li>A savings rate above <strong>20%</strong> lights up as green — aim for it!</li>
+                        <li>A savings rate above <strong>20%</strong> lights up as green - aim for it!</li>
                         <li>The I/E ratio shows <strong>"Healthy"</strong> when income ≥ expenses. Anything below 1.0
                             means you're spending more than you earn.</li>
                     </ul>
