Tell them about the new features

--- a/index.html
+++ b/index.html
@@ -361,6 +361,50 @@
                     <p>Teach FinSage once: "Swiggy → Food." It remembers forever. Rules are applied before AI, so
                         categorization is instant and offline.</p>
                 </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon-wrap" style="background:linear-gradient(135deg,#1B5E20,#4CAF50)">
+                        <svg width="28" height="28" viewBox="0 0 24 24" fill="white">
+                            <path d="M5 4h14v2H5V4zm0 10h4v6h6v-6h4l-7-7-7 7z"/>
+                        </svg>
+                    </div>
+                    <h3>Budget Tracking</h3>
+                    <p>Set monthly or category-wise budgets and track your spending in real-time. Visual progress bars
+                        show how close you are to your limits with overspend alerts.</p>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon-wrap" style="background:linear-gradient(135deg,#6A1B9A,#AB47BC)">
+                        <svg width="28" height="28" viewBox="0 0 24 24" fill="white">
+                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+                        </svg>
+                    </div>
+                    <h3>Recurring Detector</h3>
+                    <p>Automatically identifies subscriptions and recurring bills based on payment patterns. Never miss
+                        a renewal or forget to cancel unused subscriptions.</p>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon-wrap" style="background:linear-gradient(135deg,#006064,#26A69A)">
+                        <svg width="28" height="28" viewBox="0 0 24 24" fill="white">
+                            <path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zM7 10h2v7H7zm4-3h2v10h-2zm4 6h2v4h-2z"/>
+                        </svg>
+                    </div>
+                    <h3>Home Screen Widgets</h3>
+                    <p>Beautiful bento-style widgets show monthly spending, financial pulse charts, recent transactions,
+                        and budget status at a glance without opening the app.</p>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon-wrap" style="background:linear-gradient(135deg,#E65100,#FF9800)">
+                        <svg width="28" height="28" viewBox="0 0 24 24" fill="white">
+                            <path d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/>
+                        </svg>
+                    </div>
+                    <h3>Account Management</h3>
+                    <p>Manage multiple bank accounts and credit cards in one place. Balances auto-update from SMS, or
+                        add them manually for complete financial visibility.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -395,6 +439,24 @@
                         <div class="insight-feat-icon" id="if-ai"></div>
                         <div><strong>Gemini AI analysis</strong>
                             <p>Personalized summary + actionable suggestions generated fresh each week.</p>
+                        </div>
+                    </div>
+                    <div class="insight-feat">
+                        <div class="insight-feat-icon" style="font-size:24px;flex-shrink:0;margin-top:2px">📊</div>
+                        <div><strong>Spending Velocity</strong>
+                            <p>Understand how frequently you spend on specific merchants or categories with real-time velocity tracking.</p>
+                        </div>
+                    </div>
+                    <div class="insight-feat">
+                        <div class="insight-feat-icon" style="font-size:24px;flex-shrink:0;margin-top:2px">📈</div>
+                        <div><strong>Trend Indicators</strong>
+                            <p>Compare current month spending against previous month with visual ↑↓ indicators showing spending direction.</p>
+                        </div>
+                    </div>
+                    <div class="insight-feat">
+                        <div class="insight-feat-icon" style="font-size:24px;flex-shrink:0;margin-top:2px">🔁</div>
+                        <div><strong>Recurring Detector</strong>
+                            <p>Automatically identifies subscriptions and recurring bills based on payment frequency and amount consistency.</p>
                         </div>
                     </div>
                 </div>
@@ -720,10 +782,31 @@
             <div class="guide-panel" id="panel-advanced">
                 <div class="accord-list">
 
-                    <!-- Insights -->
+                    <!-- Budget Tracking -->
                     <div class="accord-item">
                         <div class="accord-header">
                             <div class="accord-num">1</div>
+                            <div class="accord-title">Set Up Budget Tracking</div>
+                            <div class="accord-chevron">⌄</div>
+                        </div>
+                        <div class="accord-body">
+                            <div class="accord-body-inner">
+                                <p>Stay on top of your spending with monthly and category-wise budgets:</p>
+                                <ol>
+                                    <li>Go to the <strong>Dashboard</strong> and tap the <strong>Budget</strong> section</li>
+                                    <li>Set your <strong>monthly budget limit</strong> or create category-specific budgets</li>
+                                    <li>Watch the visual progress bar fill as you spend — it turns red when you're close to exceeding</li>
+                                    <li>Receive <strong>overspend alerts</strong> when you breach your limits</li>
+                                </ol>
+                                <div class="tip"><span class="tip-icon">🎯</span><span>Set realistic budgets based on your 3-month average spending. FinSage shows your historical average to help you decide.</span></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Insights -->
+                    <div class="accord-item">
+                        <div class="accord-header">
+                            <div class="accord-num">2</div>
                             <div class="accord-title">Reading Your Insights</div>
                             <div class="accord-chevron">⌄</div>
                         </div>
@@ -735,6 +818,9 @@
                                     <li><strong>Next Month Forecast</strong> — AI prediction based on your 3-month average</li>
                                     <li><strong>Weekly Spending Graph</strong> — day-by-day spend across the week</li>
                                     <li><strong>Spending Trends</strong> — 6-month rolling chart to spot seasonal patterns</li>
+                                    <li><strong>Spending Velocity</strong> — real-time tracking of how frequently you spend per merchant/category</li>
+                                    <li><strong>Trend Indicators</strong> — ↑↓ arrows show if you're spending more or less than last month</li>
+                                    <li><strong>Recurring Detector</strong> — automatically finds subscriptions and recurring bills</li>
                                     <li><strong>AI Insights Card</strong> — Gemini summary + actionable suggestions (requires API key)</li>
                                 </ul>
                             </div>
@@ -744,7 +830,7 @@
                     <!-- Smart Rules -->
                     <div class="accord-item">
                         <div class="accord-header">
-                            <div class="accord-num">2</div>
+                            <div class="accord-num">3</div>
                             <div class="accord-title">Smart Rules (Auto-Categorization)</div>
                             <div class="accord-chevron">⌄</div>
                         </div>
@@ -761,10 +847,31 @@
                         </div>
                     </div>
 
+                    <!-- Account Management -->
+                    <div class="accord-item">
+                        <div class="accord-header">
+                            <div class="accord-num">4</div>
+                            <div class="accord-title">Manage Accounts</div>
+                            <div class="accord-chevron">⌄</div>
+                        </div>
+                        <div class="accord-body">
+                            <div class="accord-body-inner">
+                                <p>Track multiple bank accounts and credit cards in one place:</p>
+                                <ol>
+                                    <li>Go to <strong>Settings → Accounts</strong></li>
+                                    <li>Tap <strong>+ Add Account</strong> and choose Bank or Credit Card</li>
+                                    <li>Enter the account name and initial balance</li>
+                                    <li>Balances auto-update from SMS transactions, or tap to manually adjust</li>
+                                </ol>
+                                <div class="tip"><span class="tip-icon">💳</span><span>Credit cards show outstanding balance separately from your bank accounts for a complete financial picture.</span></div>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Gemini AI -->
                     <div class="accord-item">
                         <div class="accord-header">
-                            <div class="accord-num">3</div>
+                            <div class="accord-num">5</div>
                             <div class="accord-title">Enable Gemini AI</div>
                             <div class="accord-chevron">⌄</div>
                         </div>
@@ -804,6 +911,9 @@
                                     <li>A savings rate above <strong>20%</strong> lights up green — aim for it!</li>
                                     <li>The <strong>I/E ratio</strong> shows "Healthy" when income ≥ expenses. Below 1.0 means you're overspending.</li>
                                     <li>The <strong>Summary Card</strong> in Settings lets you customize which stats show at the top of your transaction list.</li>
+                                    <li><strong>Budget Tracking:</strong> Set category-wise budgets to control specific spending areas like Food or Shopping.</li>
+                                    <li><strong>Recurring Detector:</strong> Review detected subscriptions monthly — cancel unused ones to save money.</li>
+                                    <li><strong>Widgets:</strong> The 4×4 bento widget shows everything at once — spending, pulse chart, recent transactions, and budget status.</li>
                                 </ul>
                             </div>
                         </div>
